<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">快遞管理</string>
    <string name="action_settings">系統設定</string>
    <string name="title_section1">待取</string>
    <string name="title_section2">已取</string>
    <string name="title_section3">轉運</string>
    <string name="title_section4">接件</string>
    <string name="title_activity_log_in">龍躍快遞管理系統</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_button">登入</string>
    <string name="user_name">帳號</string>
    <string name="password">密碼</string>
    <string name="company_name">龍躍快遞系統</string>
    <string name="company_logo">Company Logo</string>
    <string name="title_activity_list_product">Product Data</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_section5">送達</string>
    <string name="button_scan">確定</string>
    <string name="button_transfer">傳送</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="customerID">業主 ID</string>
    <string name="menu_delete">刪除</string>
    <string name="a_sender">寄件人:</string>
    <string name="a_reciever">收件人:</string>
    <string name="a_addr">地址:</string>
    <string name="a_tel">電話:</string>
    <string name="a_mobile">手機:</string>
    <string name="a_company">公司名稱:</string>
    <string name="break_line">-----------------------------------</string>
    <string name="NewOrderDetailResult">New Order Detail 傳送結果:</string>
    <string name="NewOrderTraceResult">New Order Trace 傳送結果:</string>
    <string name="SetOrderStatusResult">Set Order Status 傳送結果:</string>
    <string name="warning_string">(待取件補登)</string>
    <string name="leave_button">登出</string>
    <string name="refresh">刷新</string>
    <string name="button_reallocate">案件重派</string>
	<string name="update_button">刷新資料</string>
	<string name="a_ordertype">件種:</string>
	<string name="a_imergency">●●●●●●●●特急件</string>
	<string name="a_normal">●●一般件</string>
	<string name="hint_barcode">輸入條碼</string>
	<string name="blank_str"/>
</resources>
